product bids history page added

--- a/web/html_components/public/bid.html
+++ b/web/html_components/public/bid.html
@@ -1,3 +1,80 @@
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-sm 12 col-md-12 col-lg-12">
+            <h2 class="bid-history-title">Bid History</h2>
+        </div>
+    </div>
+    <div class="row form-group">
+        <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 form-group">
+            <div class="bid-history-table-layout">
+                <div class="row form-group">
+                    <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 form-group">
+                        <span class="bidders-title">Bidders: </span> <span class="bidders-content">{{product.totalBidders}}</span>
+                    </div>
+                    <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 form-group">
+                        <span class="bids-title">Bids: </span> <span class="bids-content">{{product.totalBids}}</span>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 form-group">
+                        <span class="bids-time-left-title">Time left: </span> <span class="bids-time-left-content">{{product.timeLeft}}</span>
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-xs-12 col-sm 12 col-md-12 col-lg-12">
+                        <table class="bidders-bid-table">
+                            <thead>
+                                <tr>
+                                    <th>Bidder</th>
+                                    <th>Bid Amount</th>
+                                    <th>Bid Time</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let bid of bidList">
+                                    <td data-label="Bidder">{{bid.user.firstName}} {{bid.user.lastName}}</td>
+                                    <td data-label="Bid Amount">{{bid.currency.title}} {{bid.amount}}</td>
+                                    <td data-label="Bid Time">{{bid.time}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="bid-history-product-item-layout">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <h2 class="bid-history-product-item-title">Item details</h2>
+                    </div>
+                </div>
+                <div class="row form-group">
+                   <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                       <img class="img-responsive" src="resources/images/{{product.img}}">
+                    </div>
+                   <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                       <a><h3 class="bid-history-product-item-description">{{product.description}}</h3></a>
+                    </div>
+                </div>
+                <div class="row">
+                   <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                        <span class="bid-history-product-item-price-title">Item Price: </span>
+                    </div>
+                   <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                        <h2 class="bid-history-product-item-price-content">{{product.price}}</h2>
+                    </div>
+                </div>
+                <div class="row">
+                   <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                        <span class="bid-history-product-item-price-title">Item number: </span>
+                    </div>
+                   <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                        <h2 class="bid-history-product-item-price-content">{{product.id}}</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 Bid list<br/>
 ============================<br/>
 <ul>
@@ -8,7 +85,7 @@ Bid list<br/>
 <br/>
 Product Info<br/>
 ============================<br/>
-id: {{product.id}} , title: {{product.title}}, time: {{product.time}} price : {{product.price}}, img : {{product.img}}, description : {{product.description}}
+id: {{product.id}} , title: {{product.title}}, time: {{product.time}},totalBidders: {{product.totalBidders}}, price : {{product.price}}, img : {{product.img}}, description : {{product.description}}
 Images :
 <div *ngFor="let image of product.images">
     Image Id:{{image.id}} , Image url: {{image.url}}
