duration filer, bids link up from product

--- a/web/html_components/public/search.html
+++ b/web/html_components/public/search.html
@@ -300,3 +300,11 @@ Room size list<br/>
 </li>
 </ul>
 
+Duration list<br/>
+============================<br/>
+<ul>
+    <li *ngFor="let duration of durationList">
+        id: {{duration.id}} , title: {{duration.title}}
+</li>
+</ul>
+
