--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -66,7 +66,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="product-info-details-left-panel-previous-bids">
-                            {{product.price}}
+                            <a [routerLink]="['/bids']" (click)="showBids($event, 1)">{{product.totalBids}}</a>
                         </div>
                     </div>
                 </div>
