member menu and different left sidebar added

--- a/web/html_components/public/landing.html
+++ b/web/html_components/public/landing.html
@@ -2,7 +2,7 @@
     <div class="row form-group steps">
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
             <img src="resources/images/steps1.png">
-            <span class="hd-content">Create a <a [routerLink]="['/signup']" (click)="signup($event)">free account</a> and <a href="">log in</a>!</span>
+            <span class="hd-content">Create a <a [routerLink]="['/signup']" (click)="signup($event)">free account</a> and log in!</span>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
             <img src="resources/images/steps2.png">
