--- a/web/html_components/public/landing.html
+++ b/web/html_components/public/landing.html
@@ -23,8 +23,8 @@
                 <form role="form" (submit)="search($event, locationSelector.value)">
                       <div class="row form-group">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <h1 for="id" class="text-center search-box-header-text">Find your soltion</h1>
-                            <h3 for="id" class="text-center search-box-small-text">Search properties for sale and to rent</h3>
+                            <h1 for="id" class="text-center landing-page-search-box-header-text">Find your soltion</h1>
+                            <h3 for="id" class="text-center landing-page-search-box-small-text">Search properties for sale and to rent</h3>
                         </div>
                     </div>
                     <div class="row form-group">
