--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="row form-group">
-                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 form-group">
                         <input type="text" class="form-control product-info-details-input-custom-field" placeholder="Max Bid">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="row form-group">
-                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 form-group">
                         <input type="text" class="form-control product-info-details-input-custom-field" placeholder="Max Bid">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
