comment out dummy data

--- a/web/html_components/public/bid.html
+++ b/web/html_components/public/bid.html
@@ -75,7 +75,7 @@
         </div>
     </div>
 </div>
-Bid list<br/>
+<!--Bid list<br/>
 ============================<br/>
 <ul>
     <li *ngFor="let bid of bidList">
@@ -89,4 +89,4 @@ id: {{product.id}} , title: {{product.title}}, time: {{product.time}},totalBidde
 Images :
 <div *ngFor="let image of product.images">
     Image Id:{{image.id}} , Image url: {{image.url}}
-</div>
+</div>-->
