--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -308,8 +308,8 @@
 </div>
 
 
-id: {{product.id}} , title: {{product.title}}, time: {{product.time}} price : {{product.price}}, img : {{product.img}}, description : {{product.description}}
+<!--id: {{product.id}} , title: {{product.title}}, time: {{product.time}} price : {{product.price}}, img : {{product.img}}, description : {{product.description}}
 Images :
 <div *ngFor="let image of product.images">
     Image Id:{{image.id}} , Image url: {{image.url}}
-</div>
+</div>-->
