dashboard welcome note, my ads & saved ads updated

--- a/web/html_components/member/dashboard.html
+++ b/web/html_components/member/dashboard.html
@@ -1,1 +1,5 @@
-Dashboard Panel
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <h2 class="dashboard-welcome-note">Welcome to Your Dashboard</h2>
+    </div>
+</div>
