--- a/web/html_components/member/myads.html
+++ b/web/html_components/member/myads.html
@@ -1,4 +1,45 @@
-My Ads
+<div class="row form-group">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <h2 class="my-ads-product-heading">My Ads</h2>
+    </div>
+</div>
+<div class="row form-group">
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 form-group" *ngFor="let product of productList">
+         <div class="my-ads-product-layout">
+            <div class="row form-group">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <h2 class="my-ads-product-title"><a>{{product.title}}</a></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+                    <img class="img-responsive" src="resources/images/{{product.img}}">
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
+                    <span class="my-ads-product-description">{{product.description}}</span>
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+                     <span class="my-ads-product-price-title">Price</span>
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
+                    <span class="my-ads-product-price-amount">{{product.price}}</span>
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+                     <span class="my-ads-product-id-title">Product Id</span>
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
+                    <span class="my-ads-product-id">{{product.id}}</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--My Ads
 
 product list<br/>
 ============================<br/>
@@ -10,4 +51,4 @@ product list<br/>
             Image Id:{{image.id}} , Image url: {{image.url}}
     </div>
 </li>
-</ul>
+</ul>-->
