--- a/web/html_components/public/search.html
+++ b/web/html_components/public/search.html
@@ -45,7 +45,7 @@
                 <div id="filsters" class="collapse filter-content-box">
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
-                            <h3 class="filsters-submenu-title">Product Type</h3>
+                            <h3 class="filsters-submenu-title">Property Type</h3>
                             <select class="form-control select-custom-field">
                                 <option *ngFor="let productType of productTypeList" value="{{productType.title}}"><a id="{{productType.id}}">{{productType.title}}</a></option>
                             </select> 
