--- a/web/html_components/member/messages.html
+++ b/web/html_components/member/messages.html
@@ -1,3 +1,42 @@
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="message-inbox-header-layout">
+            <h3 class="message-inbox-header-title">Inbox</h3>
+        </div>
+    </div>
+</div>
+<div class="row form-group">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="message-inbox-content-layout" *ngFor="let message of inbox">
+             <div class="row form-group">
+                <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
+                    <input id="message-inbox-message-id-{{message.id}}" type="checkbox" class="checkbox"> <img class="img-responsive message-inbox-user-image"  src="resources/images/member_icon.png">
+                </div>
+                <div class="col-xs-7 col-sm-8 col-md-9 col-lg-9">
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <h3 class="message-inbox-sender-name">{{message.to.firstName}} {{message.to.lastName}}</h3>
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <a><h4 class="message-inbox-message-subject">{{message.subject}}</h4></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                    <div class="message-inbox-mesage-delete-icon"><i class="fa fa-times" aria-hidden="true"></i></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row form-group">
+    <div class="col-xs-6 col-sm-5 col-md-3 col-lg-3">
+        <button class="form-control common-custom-button">Delete Selected</button>
+    </div>
+</div>
+<!--
 Message Panel
 
 inbox<br/>
@@ -8,7 +47,7 @@ inbox<br/>
         <br/>
         Messages :
         <div *ngFor="let messageText of message.messageList">
-            Id:{{messageText.id}} , Text: {{messageText.text}}, Time: {{messageText.time}}, User : {{messageText.user.firstName}} {{messageText.user.lastName}}
+            Id:{{messageText.id}} , Text: {{messageText.text}}, Time: {{messageText.time}},User : {{messageText.user.img}}, User : {{messageText.user.firstName}} {{messageText.user.lastName}}
     </div>
 </li>
-</ul>
+</ul>-->
