--- a/web/html_components/public/advancedsearch.html
+++ b/web/html_components/public/advancedsearch.html
@@ -15,15 +15,15 @@
                         </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 form-group">
-            <h3 class="advanced-search-selection-title">Product Type</h3>
-            <select class="form-control select-custom-field">
-                <option *ngFor="let productType of productTypeList" value="{{productType.title}}"><a id="{{productType.id}}">{{productType.title}}</a></option>
-            </select> 
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 form-group">
             <h3 class="advanced-search-selection-title">Radius</h3>
             <select class="form-control select-custom-field">
                 <option *ngFor="let radius of radiusList" value="{{radius.title}}"><a id="{{radius.id}}">{{radius.title}}</a></option>
+            </select> 
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 form-group">
+            <h3 class="advanced-search-selection-title">Property Type</h3>
+            <select class="form-control select-custom-field">
+                <option *ngFor="let productType of productTypeList" value="{{productType.title}}"><a id="{{productType.id}}">{{productType.title}}</a></option>
             </select> 
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 form-group">
@@ -65,7 +65,7 @@
         </div>
     </div>
     <div class="row form-group">
-        <div class="col-xs-12 col-sm-offset-6 col-sm-6 col-md-offset-8 col-md-4 col-lg-offset-8 col-lg-4">
+        <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-10 col-md-2 col-lg-offset-10 col-lg-2  form-group">
             <button id="advancedSearchButton" class="form-control common-custom-button">Search</button>
         </div>
     </div>
