profile html page is updated

--- a/web/html_components/member/profile/index.html
+++ b/web/html_components/member/profile/index.html
@@ -1,1 +1,8 @@
 This is your profile
+
+<br/>Profile Info<br/>
+First Name: {{user.firstName}}
+Last Name: {{user.lastName}}
+Email: {{user.email}}
+Cell: {{user.cellNo}}
+Image: {{user.img}}
