--- a/web/html_components/member/featuredad/stats.html
+++ b/web/html_components/member/featuredad/stats.html
@@ -6,33 +6,38 @@
     </div>
     <div class="row form-group">
         <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9 form-group">
-            <div class="row form-group">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <h5> Select an advert to view its statistics...</h5>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                    <h5> Select an Advert to view its statistics...</h5>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                     <select class="form-control select-custom-field">
                         <option *ngFor="let product of productList" value="{{product.title}}"><a id="{{product.id}}">{{product.title}}</a></option>
                     </select> 
                 </div>
             </div>
-            <div class="row form-group">
-                <div class="col-xs-4 col-sm-3 col-md-1 col-lg-1">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                     <h5>From</h5>
                 </div>
-                <div class="col-xs-8 col-sm-9 col-md-5 col-lg-5  form-group">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                     <input class="form-control input-custom-field" type="text" id="datepicker">
                 </div>
-                <div class="col-xs-4 col-sm-3 col-md-1 col-lg-1">
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                     <h5>To</h5>
                 </div>
-                <div class="col-xs-8 col-sm-9 col-md-5 col-lg-5">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                     <input class="form-control input-custom-field" type="text" id="datepicker">
                 </div>
             </div>
             <div class="row form-group">
-                <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+                <div class="col-xs-12 col-sm-6 col-md-offset-6 col-md-6 col-lg-6">
                     <button id="view-stats-button" class="form-control common-custom-button">View Stats</button>
                 </div>
             </div>
+
             <div class="row form-group">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <table class="featured-ad-stats-table">
@@ -105,7 +110,7 @@
 </div>
 
 
-Stats Module
+<!--Stats Module
 
 <br/>Advert List<br/>
 ============================<br/>
@@ -137,4 +142,4 @@ Stats Module
 {{accountSummaryFA.spentToday.amount}}{{accountSummaryFA.spentToday.currencyUnit.title}}
 
 <br/>Left Today<br/>
-{{accountSummaryFA.leftToday.currencyUnit.title}}{{accountSummaryFA.leftToday.amount}}
+{{accountSummaryFA.leftToday.currencyUnit.title}}{{accountSummaryFA.leftToday.amount}}-->
