Manage Product page is updated

--- a/web/html_components/member/manageproduct/index.html
+++ b/web/html_components/member/manageproduct/index.html
@@ -1,1 +1,89 @@
 Manage New Product
+
+<br/>Room list<br/>
+============================<br/>
+<ul>
+    <li *ngFor="let room of roomList">
+        id: {{room.id}} , title: {{room.title}}
+</li>
+</ul>
+
+<br/>Size list<br/>
+============================<br/>
+<ul>
+    <li *ngFor="let productSize of productSizeList">
+        id: {{productSize.id}} , title: {{productSize.title}}
+</li>
+</ul>
+
+<br/>Type list<br/>
+============================<br/>
+<ul>
+    <li *ngFor="let productType of productTypeList">
+        id: {{productType.id}} , title: {{productType.title}}
+</li>
+</ul>
+
+<br/>Duration list<br/>
+============================<br/>
+<ul>
+    <li *ngFor="let duration of durationList">
+        id: {{duration.id}} , title: {{duration.title}}
+</li>
+</ul>
+
+<br/>Area list<br/>
+============================<br/>
+<ul>
+    <li *ngFor="let area of areaList">
+        id: {{area.id}} , title: {{area.searchString}}
+</li>
+</ul>
+
+<br/>Amenities<br/>
+============================<br/>
+<ul>
+    <li *ngFor="let amenity of amenityList">
+        id: {{amenity.id}} , title: {{amenity.title}}
+</li>
+</ul>
+
+<br/>Occupation List<br/>
+============================<br/>
+<ul>
+    <li *ngFor="let occupation of occupationList">
+        id: {{occupation.id}} , title: {{occupation.title}}
+</li>
+</ul>
+
+<br/>Smoking List<br/>
+============================<br/>
+<ul>
+    <li *ngFor="let smoking of smokingList">
+        id: {{smoking.id}} , title: {{smoking.title}}
+</li>
+</ul>
+
+<br/>Pet List<br/>
+============================<br/>
+<ul>
+    <li *ngFor="let pet of petList">
+        id: {{pet.id}} , title: {{pet.title}}
+</li>
+</ul>
+
+<br/>Min Stay List<br/>
+============================<br/>
+<ul>
+    <li *ngFor="let minStay of minStayList">
+        id: {{minStay.id}} , title: {{minStay.title}}
+</li>
+</ul>
+
+<br/>Max Stay List<br/>
+============================<br/>
+<ul>
+    <li *ngFor="let maxStay of maxStayList">
+        id: {{maxStay.id}} , title: {{maxStay.title}}
+</li>
+</ul>
